grafana/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: grafana
spec:
  hosts:
    - "grafana.example.com" # Ersetzen Sie dies durch Ihre tatsächliche Domain
  gateways:
    - grafana-gateway
  http:
    - route:
        - destination:
            host: grafana
            port:
              number: 80
